--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
+pyTelegramBotAPI==3.6.6
 python-dotenv==0.10.3
-requests==2.20.0
-telebot==0.0.3
+requests==2.22.0
+six==1.13.0
 urllib3==1.25.7
 Werkzeug==0.16.0
